--- a/app/templates/_layouts/base.html
+++ b/app/templates/_layouts/base.html
@@ -7,20 +7,19 @@
     {% include '_partials/_head.html' %}
 
     <!-- Title -->
-    <title>{% block title %}beeMôn{% endblock %}</title>
+    <title>{% block title %}Crawler IMDB{% endblock %}</title>
 
 </head>
 
-    <body>
+<body>
 
-    <!-- Navbar Section -->
-    {% include '_partials/_navbar.html' %}
+<!-- Navbar Section -->
+{% include '_partials/_navbar.html' %}
 
-    <!-- Page Content -->
-    {% block content %} {% endblock %}
+<!-- Page Content -->
+{% block content %} {% endblock %}
 
-
-    </body>
+</body>
 
 </html>
 
