--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,7 +1,7 @@
 {% extends '_layouts/base.html' %}
 
 <!-- Title -->
-<title>{% block title %}beeMôn{% endblock %}</title>
+<title>{% block title %}Crawler IMDB{% endblock %}</title>
 
 
 {% block content %}
@@ -68,7 +68,7 @@
                 <h3>Resultados:</h3>
             </div>
             <div class="col-md-6 text-right">
-                <button type="button" class="btn btn-primary" id="download-button">Download CSV</button>
+                <a href="{% url 'download_csv' %}" class="btn btn-primary">Download CSV</a>
             </div>
         </div>
 
@@ -95,7 +95,7 @@
                 <h3>Resultados:</h3>
             </div>
             <div class="col-md-6 text-right">
-                <button type="button" class="btn btn-secondary" id="download-json-button">Download JSON</button>
+                <a href="{% url 'download_json' %}" class="btn btn-secondary">Download JSON</a>
             </div>
         </div>
         <div class="row">
